--- a/styles.css
+++ b/styles.css
@@ -4,31 +4,31 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  text-decoration: none;
 }
 
 :root {
-  --headingbg: #260658;
-  --menubg: #31066d;
-  --bodybg: #ccc9f4;
-  --sectionbg: #ece4fc;
+  --headingbg: #393ec4;
+  --menubg: #f9fafc;
+  --bodybg: linear-gradient(to right, #ffffff, #fafaf9);
+  --sectionbg: #2f3046;
   --lighttext: #f9f9f9;
   --darkbg: #0b0425;
   --lightbg: #f4f8fe;
-  --btncolor: #331ab1;
-  --list-item-container-color: #5337b6;
-  --addbtnncolor: #ffcd2c;
-  --ui-buttons-signup: rgb(73, 89, 211);
-  --ui-buttons-login: rgb(82, 48, 182);
+  --btncolor: #188f91;
+  --list-item-container-color: #d8dfee;
+  --addbtnncolor: #5d62f7;
+  --ui-buttons-signup: rgb(58, 70, 160);
+  --ui-buttons-login: rgb(48, 142, 182);
   --font-family: 'Open Sans', sans-serif;
+  --deletebtn: #d53970;
+  --renamebtn: #b9e2e9;
 }
 
 html,
 body {
   height: 100%;
-}
-
-body {
-  font-family: --var(--font-family);
+  font-family: 'Open Sans', sans-serif;
 }
 
 .description {
@@ -47,24 +47,25 @@ body {
 .list-item-container {
   height: 60px;
   background-color: var(--list-item-container-color);
-  margin-top: 10px;
+  margin-bottom: 17px;
   display: flex;
   justify-content: center;
   align-items: center;
   cursor: pointer;
-  border-radius: 6px;
-  color: rgba(190, 187, 245, 0.838);
-  box-shadow: 0 4px 3px rgba(25, 14, 94, 0.2);
+  border-radius: 5px;
+  box-shadow: 0px 4px 3px rgba(25, 14, 94, 0.1);
+  color: #4d4d4be6;
 }
 
 .list-item-container:hover {
-  background-color: #6258d6;
-  color: rgba(235, 240, 245, 0.9);
+  background-color: #5871d6;
+  color: #f5f5ebe6;
 }
 
 .list-item {
   list-style-type: none;
-  font-size: 0.999em;
+  font-size: 0.97em;
+  font-weight: 400;
 }
 
 .body-wrapper {
@@ -90,6 +91,7 @@ body {
 .title {
   color: var(--lighttext);
   font-size: 2em;
+  text-decoration: none;
 }
 
 .description {
@@ -100,9 +102,11 @@ body {
 }
 
 .menu-container {
+  height: 100%;
   grid-area: menu;
   background-color: var(--menubg);
   overflow: scroll;
+  overflow-x: hidden;
 }
 
 .add-btn-container {
@@ -123,11 +127,17 @@ body {
   font-family: var(--font-family);
   font-size: 1.6rem;
   font-weight: 600;
+  padding: 10px;
+}
+
+.list-name:focus {
+  background-color: #188f91;
 }
 
 .list-info-container {
   display: flex;
   flex-direction: row;
+  align-items: center;
   justify-content: space-between;
   width: 90%;
   margin: 25px 0px 25px 0px;
@@ -135,22 +145,45 @@ body {
 
 .todo-item-container {
   width: 50ch;
-  border: 2px solid #9497e9;
+  border: 2px solid #c5c6d8;
   height: 45px;
+  margin-top: 10px;
   margin-bottom: 10px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 0px 25px 0px 25px;
-  overflow: scroll;
 }
 
 .todo-item {
   list-style-type: none;
 }
 
-#todo {
+.todo-controls {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  padding-right: 5%;
+}
+
+.delete-list-btn {
+  width: 150px;
   height: 50px;
+  background-color: var(--deletebtn);
+  color: #ffffff;
+  cursor: pointer;
+  border: none;
+  border-radius: 6px;
+}
+
+.rename-list {
+  width: 150px;
+  height: 50px;
+  cursor: pointer;
+  background-color: var(--renamebtn);
+  border: none;
+  border-radius: 6px;
+  margin-right: 10px;
 }
 
 .main-content {
@@ -159,7 +192,14 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: var(--bodybg);
+  background-image: var(--bodybg);
+}
+
+.form-container {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  position: relative;
 }
 
 .form {
@@ -167,20 +207,27 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 90%;
+  margin-top: 25px;
+  width: 100%;
+}
+
+.text {
+  font-size: 1.2em;
+  font-weight: 400;
 }
 
 .section {
   min-width: 350px;
   width: 55%;
   background-color: var(--sectionbg);
-  box-shadow: 0 -1px 20px rgba(14, 56, 101, 0.1);
-  border-radius: 16px;
+  box-shadow: 0 -1px 20px rgba(14, 14, 101, 0.4);
+  border-radius: 15px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   padding: 50px 0px 50px 0px;
+  color: #ffffff;
 }
 
 .signupbtn,
@@ -207,24 +254,33 @@ body {
 
 .addBtn {
   background-color: var(--addbtnncolor);
-  color: #4518cd;
-  width: 150px;
+  color: #ffffff;
+  width: 175px;
   height: 60px;
-  border-radius: 20px;
+  border-radius: 50px;
   border: none;
-  box-shadow: 0 -1px 20px rgba(0, 0, 0, 0.4);
+  box-shadow: 0 -1px 20px rgba(0, 0, 0, 0.2);
   cursor: pointer;
   position: fixed;
   top: 128px;
-  left: 50px;
+  left: 80px;
   font-size: 0.86em;
-  font-weight: 500;
+  font-weight: 600;
   font-family: var(--font-family);
   z-index: 100;
 }
 
 .addBtn:hover {
-  background-color: #83fff7;
+  background-color: #faf9f9;
+  color: #36468f;
+}
+
+.addBtn i {
+  padding: 5px;
+}
+
+.btnTrash {
+  cursor: pointer;
 }
 
 .ctaBtn {
@@ -253,26 +309,58 @@ input[type='submit'] {
 input[type='text'],
 input[type='password'],
 input[type='email'] {
-  border-radius: 20px;
-  height: 40px;
+  border-radius: 50px;
+  height: 50px;
   border: 2px solid rgba(66, 74, 158, 0.2);
+  background-color: #f2ecec;
   width: 75%;
   margin: 10px 0px 5px 0px;
+  font-size: 1.1em;
   font-weight: 600;
   text-align: center;
-  min-width: 275px;
+  min-width: 50%;
+  max-width: 60%;
+  height: 55px;
+}
+
+input[type='text']:focus,
+input[type='password']:focus,
+input[type='email']:focus {
+  outline: none;
+  border: 3px solid #b4c8f9;
+}
+
+input[type='text']:hover,
+input[type='password']:hover,
+input[type='email']:hover {
+  background-color: #e4e6eb;
 }
 
 input[type='submit'] {
   border-radius: 20px;
   background-color: var(--btncolor);
   color: var(--lighttext);
-  height: 43px;
-  border: 1px solid #6266e3;
+  height: 50px;
+  border: none;
   width: 400px;
   margin: 20px 0px 5px 0px;
   max-width: 200px;
-  box-shadow: 0 -1px 20px rgba(165, 154, 238, 0.8);
+  box-shadow: 0 4px 3px rgba(25, 14, 94, 0.2);
+}
+
+input[type='checkbox'] {
+  appearance: none;
+  -webkit-appearance: none;
+  background-color: #fafafa;
+  border: 1px solid #cacece;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05), inset 0px -15px 10px -12px rgba(0, 0, 0, 0.05);
+  padding: 9px;
+  border-radius: 3px;
+  position: relative;
+}
+
+input[type='checkbox']:checked {
+  background-color: green;
 }
 
 .error {
@@ -292,16 +380,33 @@ input[type='submit'] {
   font-weight: 700;
 }
 
+.save-list-name-btn {
+  visibility: hidden;
+  background-color: Transparent;
+  width: 85px;
+  height: 35px;
+  border-radius: 6px;
+  cursor: pointer;
+  color: #ffffff;
+  border: 2px solid #ffffff;
+}
+
+hr.horizontal-divider {
+  border: 1px solid rgba(237, 232, 232, 0.1);
+  width: 100%;
+  margin: 15px;
+}
+
+.icon-lock {
+  width: 150px;
+  height: 150px;
+  fill: rgb(202, 187, 237);
+}
+
 /* Button Bounce Animation START */
 .bounce-top {
   -webkit-animation: bounce-top 0.9s both;
   animation: bounce-top 0.9s both;
-}
-
-hr.horizontal-divider {
-  border-top: 1px solid rgb(169, 165, 165);
-  width: 100%;
-  margin: 15px;
 }
 
 @-webkit-keyframes bounce-top {
@@ -410,3 +515,55 @@ hr.horizontal-divider {
 }
 
 /* BUTTON BOUNCE ANIMATION END */
+
+.add-todo-form-group {
+  position: relative;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.add-todo-form-group i {
+  position: absolute;
+  left: 74%;
+  color: rgb(193, 191, 191);
+}
+
+.checkbox-wrapper {
+  display: flex;
+  flex-direction: row;
+  margin-top: 30px;
+}
+
+.custom-checkbox {
+  display: block;
+  width: 25px;
+  height: 25px;
+  background-color: #ddd;
+  border-radius: 6px;
+  position: relative;
+  transition: background-color 0.4s;
+  margin-right: 10px;
+}
+
+#check:checked ~ .custom-checkbox {
+  background-color: #08bb68;
+}
+
+#check:checked ~ .custom-checkbox::after {
+  opacity: 1;
+}
+
+.custom-checkbox::after {
+  content: '';
+  position: absolute;
+  width: 10px;
+  height: 16px;
+  border-right: 5px solid #ffffff;
+  border-bottom: 5px solid #ffffff;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%) rotateZ(40deg);
+  opacity: 0;
+  transition: all 0.2s;
+}
